GL/Projet_GL/src/test/deca/context/invalid/sansObjet/invalid_return_in_main.deca
// Test : return_in_main
// But : interdire l’instruction return dans le bloc principal.
// Couvre : règles sémantiques du main.
// Résultat attendu : erreur contextuelle.
// Erreur affichée: Return Statement is not allowed in main

{
    return 0;
}

